--- a/gripehongkong.html
+++ b/gripehongkong.html
@@ -8,8 +8,8 @@
 <body>
 	<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
-			<img src="img/hk.png">
-			<img src="img/hk1.png">
+			<img src="img/hk.PNG">
+			<img src="img/hk1.PNG">
 		</div>
 </body>
 </html>
