--- a/ifcovid19.html
+++ b/ifcovid19.html
@@ -8,11 +8,11 @@
 <body>
 	<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
-			<img src="img/eco.png">
-			<img src="img/eco2.png">
-			<img src="img/eco3.png">
-			<img src="img/eco4.png">
-			<img src="img/eco5.png">
+			<img src="img/eco.PNG">
+			<img src="img/eco2.PNG">
+			<img src="img/eco3.PNG">
+			<img src="img/eco4.PNG">
+			<img src="img/eco5.PNG">
 		</div>
 
 </body>
