--- a/peste.html
+++ b/peste.html
@@ -9,10 +9,10 @@
 		<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
 			<img src="img/peste.png">
-			<img src="img/peste2.png">
-			<img src="img/peste3.png">
-			<img src="img/peste4.png">
-			<img src="img/peste5.png">
+			<img src="img/peste2.PNG">
+			<img src="img/peste3.PNG">
+			<img src="img/peste4.PNG">
+			<img src="img/peste5.PNG">
 		</div>
 </body>
 </html>
