--- a/plagajustiniano.html
+++ b/plagajustiniano.html
@@ -8,10 +8,10 @@
 <body>
 	<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
-			<img src="img/PJ1.jpg">
-			<img src="img/PJ2.jpg">
-			<img src="img/PJ3.jpg">
-			<img src="img/PJ4.jpg">
+			<img src="img/PJ1.JPG">
+			<img src="img/PJ2.JPG">
+			<img src="img/PJ3.JPG">
+			<img src="img/PJ4.JPG">
 
 		</div>
 </body>
