--- a/viruela.html
+++ b/viruela.html
@@ -8,9 +8,9 @@
 <body>
 	<a href="index.html" class="enlace-sidebar">INICIO</a>
 		<div class="img-post">
-			<img src="img/viruela.png">
-			<img src="img/viruela2.png">
-			<img src="img/viruela3.png">
+			<img src="img/viruela.PNG">
+			<img src="img/viruela2.PNG">
+			<img src="img/viruela3.PNG">
 		</div>
 
 </body>
